--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta property="og:image" content="https://csound.com/icsc2022/img/code.JPG">
+    <meta property="og:image:width" content="1024">
+    <meta property="og:image:height" content="1024">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://csound.com/icsc2022/"/>
+    <meta property="og:title" content="ICSC 2022" />
+    <meta property="og:description" content="The 6th International Csound Conference will be held TUS Midland, Athlone from November 4th until November 6th 2022" />
     <title>ICSC2022 Conference</title>
 
     <!-- Bootstrap -->
