updated open graph meta tags

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://csound.com/icsc2022/"/>
     <meta property="og:title" content="ICSC 2022" />
-    <meta property="og:description" content="The 6th International Csound Conference will be held TUS Midland, Athlone from November 4th until November 6th 2022" />
+    <meta property="og:description" content="The 6th International Csound Conference will be held at TUS Midlands from November 4th to November 6th 2022" />
     <title>ICSC2022 Conference</title>
 
     <!-- Bootstrap -->
