Added Hi_res image of Rory

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       <div>
         <div class="col-sm-3">
           <h3 style=" text-align:justify">Rory Walsh</h3>
-          <img src="img/RoryWalsh.jpeg" , style="width:100%;">
+          <img src="img/RoryWalsh_out.jpeg" , style="width:100%;">
         </div>
         <div class="col-sm-9" style="padding-top: 5%; padding-bottom: 5%;">
           <button type="button" class="collapsible">Biography</button>
