--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
   <!-- Keynotes -->
 
-  <div class="content" style="padding-left:10%; padding-right:10%">
+  <div class="content">
     <div class="container">
       <div>
         <div class="col-sm-3">
@@ -254,7 +254,7 @@
   <br>
   <hr>
 
-  <div class="content" style="padding-left:10%; padding-right:10%">
+  <div class="content">
     <div class="container">
       <div>
         <div class="col-sm-3">
@@ -299,7 +299,7 @@
   <br>
   <hr>
 
-  <div class="content" style="padding-left:10%; padding-right:10%">
+  <div class="content">
     <div class="container">
       <div>
         <div class="col-sm-3">
