Updated paper deadline

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
           <div>April 27: paper submission opens</div>
         </li>
         <li>
-          <div>July 15: paper submission deadline</div>
+          <div><s>July 15:</s> August 19 (23:59): paper submission deadline</div>
         </li>
         <li>
           <div>September 1: paper notification of acceptance</div>
