--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="https://drive.google.com/file/d/1Ahli-KCLBVyWIO-LT2ZdJlqJne4d5qHq/view?usp=sharing">
+  <meta property="og:image" content="https://csound.com/icsc2022/img/code.JPG">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1024">
   <meta property="og:image:height" content="1024">
