--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta property="og:image" content="https://csound.com/icsc2022/img/code.JPG">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1024">
   <meta property="og:image:height" content="1024">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta property="og:title" content="ICSC2022 Conference">
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://csound.com/icsc2022/">
+  <meta property="og:description" content="This years event will be hosted in Athlone, at the recently established Technological University of the Shannon Midlands campus.">
+
   <title>ICSC2022 Conference</title>
 
   <!-- Bootstrap -->
