--- a/index.html
+++ b/index.html
@@ -6,15 +6,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta property="og:image" content="https://csound.com/icsc2022/img/code.JPG">
-  <meta property="og:image:type" content="image/jpeg">
-  <meta property="og:image:width" content="400">
-  <meta property="og:image:height" content="400">
-  <meta property="og:title" content="ICSC2022 Conference">
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://csound.com/icsc2022/">
-  <meta property="og:description" content="This years event will be hosted in Athlone, at the recently established Technological University of the Shannon Midlands campus.">
+    <meta name="description" content="This years event will be hosted in Athlone, at the recently established Technological University of the Shannon Midlands campus.">
 
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="ICSC2022 Conference">
+    <meta itemprop="description" content="This years event will be hosted in Athlone, at the recently established Technological University of the Shannon Midlands campus.">
+    <meta itemprop="image" content="http://csound.com/icsc2022/img/code.JPG">
+    
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://csound.com/icsc2022">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="ICSC2022 Conference">
+    <meta property="og:description" content="This years event will be hosted in Athlone, at the recently established Technological University of the Shannon Midlands campus.">
+    <meta property="og:image" content="http://csound.com/icsc2022/img/code.JPG">
+    
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="ICSC2022 Conference">
+    <meta name="twitter:description" content="This years event will be hosted in Athlone, at the recently established Technological University of the Shannon Midlands campus.">
+    <meta name="twitter:image" content="http://csound.com/icsc2022/img/code.JPG">
   <title>ICSC2022 Conference</title>
 
   <!-- Bootstrap -->
