--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="ICSC2022 Conference">
     <meta itemprop="description" content="This years event will be hosted in Athlone, at the recently established Technological University of the Shannon Midlands campus.">
-    <meta itemprop="image" content="http://csound.com/icsc2022/img/code.JPG">
+    <meta itemprop="image" content="https://csound.com/icsc2022/img/code.JPG">
     
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://csound.com/icsc2022">
     <meta property="og:type" content="website">
     <meta property="og:title" content="ICSC2022 Conference">
     <meta property="og:description" content="This years event will be hosted in Athlone, at the recently established Technological University of the Shannon Midlands campus.">
-    <meta property="og:image" content="http://csound.com/icsc2022/img/code.JPG">
+    <meta property="og:image" content="https://csound.com/icsc2022/img/code.JPG">
     
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="ICSC2022 Conference">
     <meta name="twitter:description" content="This years event will be hosted in Athlone, at the recently established Technological University of the Shannon Midlands campus.">
-    <meta name="twitter:image" content="http://csound.com/icsc2022/img/code.JPG">
+    <meta name="twitter:image" content="https://csound.com/icsc2022/img/code.JPG">
   <title>ICSC2022 Conference</title>
 
   <!-- Bootstrap -->
