--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="ICSC2022 Conference">
     <meta property="og:description" content="This years event will be hosted in Athlone, at the recently established Technological University of the Shannon Midlands campus.">
-    <meta property="og:image" content="https://csound.com/icsc2022/img/code.JPG">
+    <meta property="og:image:secure_url" content="https://csound.com/icsc2022/img/code.JPG">
     
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
