Adding registration details

--- a/index.html
+++ b/index.html
@@ -667,8 +667,13 @@
   <div class="content">
     <div class="container">
       <h2 style="text-decoration-line: underline;">Registration</h2>
-      <p>Registration will open on July 22</p>
-      <p>Watch this space...</p>
+      <p>Attendees registering with student rates will be required to show a valid student ID at the registration desk of the conference to obtain thier badges. Reduced rates are for student attendees only (non-authors).
+
+All authors, students or not, must pay the full registration fee in order to have their papers included in the conference proceedings.
+
+All prices are in Euros.</p>
+      <p>You can register through the <a href="https://www.eventbrite.com/e/icsc-2022-tickets-389236606167"
+          target="_blank">Eventbrite page</a> for this event </p>
 
     </div>
   </div>
