Amended registration conditions

--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
       <h2 style="text-decoration-line: underline;">Registration</h2>
       <p>Attendees registering with student rates will be required to show a valid student ID at the registration desk of the conference to obtain thier badges. Reduced rates are for student attendees only (non-authors).
 
-All authors, students or not, must pay the full registration fee in order to have their papers included in the conference proceedings.
+All authors must pay the relevant registration fee in order to have their papers included in the conference proceedings.
 
 All prices are in Euros.</p>
       <p>You can register through the <a href="https://www.eventbrite.com/e/icsc-2022-tickets-389236606167"
