--- a/index.html
+++ b/index.html
@@ -163,9 +163,28 @@
         <li>Michael Gogins</li>
         <li>Luis Jure</li>
         <li>Tarmo Johannes</li>
+        <li>Rory Walsh</li>
       </ul>
     </div>
   </div>
+  
+ 
+  <div class="content">
+    <div class="container">
+      <h3>Music Review Committee</h3>
+      <br>
+      <ul>
+        <li>Gordon Delap</li>
+        <li>Jenn Kirby</li>
+        <li>Brian Bridges</li>
+        <li>David Stalling</li>
+        <li>Eoin Smith</li>
+        <li>Kerry Hagan</li>
+        <li>Iain McCurdy</li>
+      </ul>
+    </div>
+  </div>
+
 
   <br>
   <br>
