--- a/index.html
+++ b/index.html
@@ -383,12 +383,12 @@
   <div class="content">
     <div style="text-align: center" class="container">
 
-      <p>TUS Midlands</p>
-      <p> University Road,</p>
-      <p> Athlone, </p>
-      <p> Co.Westmeath </p>
-      <p> Ireland</p>
-      <p>N37 HD68</p>
+      <h3>TUS Midlands</h3>
+      <h3> University Road,</h3>
+      <h3> Athlone, </h3>
+      <h3> Co.Westmeath </h3>
+      <h3> Ireland</h3>
+      <h3>N37 HD68</h3>
 
       <br>
       <h2>Getting Here</h2>
