--- a/program_list.html
+++ b/program_list.html
@@ -549,10 +549,38 @@
         </div>
       </footer>
     
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+ <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+ <!-- Include all compiled plugins (below), or include individual files as needed -->
+ <script src="js/bootstrap.min.js"></script>
+ <script>
+   $(window).on('scroll', function () {
+
+     if ($(window).scrollTop() >= 0) {
+       $('header').addClass('fixed');
+       //$('.page-header').addClass('hide-header');
+     }
+     else {
+       $('header').removeClass('fixed');
+       //$('.page-header').removeClass('hide-header');
+     }
+   });
+
+   var coll = document.getElementsByClassName("collapsible");
+   var i;
+
+   for (i = 0; i < coll.length; i++) {
+     coll[i].addEventListener("click", function () {
+       this.classList.toggle("active");
+       var content = this.nextElementSibling;
+       if (content.style.display === "block") {
+         content.style.display = "none";
+       } else {
+         content.style.display = "block";
+       }
+     });
+   }
+ </script>
 </body>
 
 </html>
