--- a/music.html
+++ b/music.html
@@ -70,7 +70,7 @@
                   <ul class="dropdown-menu">
                     <li><a href="./program_list.html">Conference Program</a></li>
                     <li><a href="./keynotes.html">Keynotes</a></li>
-                    <li class="active"><a href="./abstracts.html">Proceedings</a></li>
+                    <li><a href="./abstracts.html">Proceedings</a></li>
                     <!-- <li><a href="./music.html">Music</a></li> -->
                   </ul>
                 </li>
