fixed spelling error

--- a/program_list.html
+++ b/program_list.html
@@ -351,7 +351,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>Ricahrd Boulanger<br>
+                        <td>Richard Boulanger<br>
                             <!-- <a href="./keynotes.html#mccurdy"><i>Csound &mdash; the Swiss Army Synthesiser</i></a> -->
                         </td>
                     </tr>
