--- a/keynotes.html
+++ b/keynotes.html
@@ -70,6 +70,7 @@
                     <li><a href="./program_list.html">Conference Program</a></li>
                     <li><a href="./keynotes.html">Keynotes</a></li>
                     <li><a href="./abstracts.html">Proceedings</a></li>
+                    <li><a href="./workshops.html">Workshops</a></li>
                     <!-- <li><a href="./music.html">Music</a></li> -->
                   </ul>
                 </li>
