--- a/music.html
+++ b/music.html
@@ -71,6 +71,7 @@
                     <li><a href="./program_list.html">Conference Program</a></li>
                     <li><a href="./keynotes.html">Keynotes</a></li>
                     <li><a href="./abstracts.html">Proceedings</a></li>
+					<li><a href="./workshops.html">Proceedings</a></li>
                     <!-- <li><a href="./music.html">Music</a></li> -->
                   </ul>
                 </li>
