--- a/index.html
+++ b/index.html
@@ -450,6 +450,23 @@
 
     </div>
 
+    <br>
+    <br>
+
+
+
+    <img src="img/engineering_building1.png/engineering_building1.png.001.jpeg" alt="map3" width="100%" height="100%" frameborder="0" style="border:00" allowfullscreen="">
+
+    <br>
+    <br>
+
+    <img src="img/ICSC_Engineering building map.001.jpeg" alt="map1" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen="">
+
+    <br>
+    <br>
+
+    <img src="img/ICSC_Engineering building map.002.jpeg" alt="map2" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen="">
+
 
 
   </div>
