--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
       <br>
 
       <iframe
-        src="https://maps.google.com/maps?q=Dublin%20Rd,%20Kilmacuagh%20(Cooke),%20Athlone,%20Co.%20Westmeath&t=&z=13&ie=UTF8&iwloc=&output=embed"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2854.5545550614315!2d-7.907965909791265!3d53.41905659008645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485c4932cbe61171%3A0x7c722950a6316f81!2sSoftware%20Research%20Institute!5e1!3m2!1sen!2sie!4v1667516696983!5m2!1sen!2sie"
         width="100%" height="450" frameborder="0" style="border:0" allowfullscreen=""></iframe>
 
     </div>
