--- a/program_list.html
+++ b/program_list.html
@@ -250,7 +250,7 @@
 
                     <tr class="horario">
                         <td>18:00 &mdash; 19:00</td>
-                        <td><a href="./concerts.html#concert_1">Concert 1</a> </td>
+                        <td><aConcert 1</a> </td>
                     </tr>
 
                     <tr class="horario">
@@ -260,7 +260,7 @@
 
                     <tr class="horario">
                         <td>18:00 &mdash; 19:00</td>
-                        <td><a href="./concerts.html#concert_2">Concert 2</a></td>
+                        <td><a>Concert 2</a></td>
                     </tr>
 
                 </tbody>
@@ -400,7 +400,7 @@
 
                     <tr class="horario">
                         <td>17:30 &mdash; 18:30</td>
-                        <td><a href="./concerts.html#concert_3">Concert 3</a> </td>
+                        <td><a>Concert 3</a> </td>
                     </tr>
 
                     <tr class="horario">
@@ -410,7 +410,7 @@
 
                     <tr class="horario">
                         <td>19:00 &mdash; 20:00</td>
-                        <td><a href="./concerts.html#concert_4">Concert 4</a></td>
+                        <td><a>Concert 4</a></td>
                     </tr>
                     <!--
 	  <tr>
@@ -516,7 +516,7 @@
 
                     <tr class="horario">
                         <td>18:00 &mdash; 19:00</td>
-                        <td><a href="./concerts.html#concert_5">Concert 5</a> </td>
+                        <td><a>Concert 5</a> </td>
                     </tr>
 
                     <tr class="horario">
@@ -526,7 +526,7 @@
 
                     <tr class="horario">
                         <td>18:00 &mdash; 19:00</td>
-                        <td><a href="./concerts.html#concert_6">Concert 6</a></td>
+                        <td><a >Concert 6</a></td>
                     </tr>
 
                 </tbody>
