--- a/program_list.html
+++ b/program_list.html
@@ -250,7 +250,7 @@
 
                     <tr class="horario">
                         <td>18:00 &mdash; 19:00</td>
-                        <td><aConcert 1</a> </td>
+                        <td><a>Concert 1</a> </td>
                     </tr>
 
                     <tr class="horario">
