added music for day 1

--- a/program_list.html
+++ b/program_list.html
@@ -75,7 +75,7 @@
                     <li><a href="./keynotes.html">Keynotes</a></li>
                     <li><a href="./abstracts.html">Proceedings</a></li>
                     <li><a href="./workshops.html">Workshops</a></li>
-                    <!-- <li><a href="./music.html">Music</a></li> -->
+                    <li><a href="./music.html">Music</a></li>
                   </ul>
                 </li>
     
@@ -250,7 +250,7 @@
 
                     <tr class="horario">
                         <td>18:00 &mdash; 19:00</td>
-                        <td><a>Concert 1</a> </td>
+                        <td><a href="./music.html"></ahref>>Concert 1</a> </td>
                     </tr>
 
                     <tr class="horario">
