--- a/abstracts.html
+++ b/abstracts.html
@@ -75,7 +75,7 @@
                     <li><a href="./keynotes.html">Keynotes</a></li>
                     <li><a href="./abstracts.html">Proceedings</a></li>
                     <li><a href="./workshops.html">Workshops</a></li>
-                    <!-- <li><a href="./music.html">Music</a></li> -->
+                    <li><a href="./music.html">Music</a></li>
                   </ul>
                 </li>
     
