--- a/program_list.html
+++ b/program_list.html
@@ -250,7 +250,7 @@
 
                     <tr class="horario">
                         <td>18:00 &mdash; 19:00</td>
-                        <td><a href="./music.html"></ahref>>Concert 1</a> </td>
+                        <td><a href="./music.html"></ahref>Concert 1</a> </td>
                     </tr>
 
                     <tr class="horario">
@@ -260,7 +260,7 @@
 
                     <tr class="horario">
                         <td>20:00 &mdash; 21:00</td>
-                        <td><a>Concert 2</a></td>
+                        <td><a href="./music.html#concert2"></ahref>Concert 2</a></td>
                     </tr>
 
                 </tbody>
@@ -400,7 +400,7 @@
 
                     <tr class="horario">
                         <td>17:30 &mdash; 18:30</td>
-                        <td><a>Concert 3</a> </td>
+                        <td><a href="./music.html#concert3"></ahref>Concert 3</a> </td>
                     </tr>
 
                     <tr class="horario">
@@ -410,7 +410,7 @@
 
                     <tr class="horario">
                         <td>19:00 &mdash; 20:00</td>
-                        <td><a>Concert 4</a></td>
+                        <td><a href="./music.html#concert4"></ahref>Concert 4</a></td>
                     </tr>
                     <!--
 	  <tr>
