--- a/program_list.html
+++ b/program_list.html
@@ -516,7 +516,7 @@
 
                     <tr class="horario">
                         <td>16:30 &mdash; 17:00</td>
-                        <td><a>Concert 5</a> </td>
+                        <td><a href="./music.html#concert5">Concert 5</a> </td>
                     </tr>
 
                     <tr class="horario">
@@ -526,7 +526,7 @@
 
                     <tr class="horario">
                         <td>17:30 &mdash; 18:30</td>
-                        <td><a >Concert 6</a></td>
+                        <td><a href="./music.html#concert6">Concert 6</a></td>
                     </tr>
 
                 </tbody>
