--- a/abstracts.html
+++ b/abstracts.html
@@ -160,7 +160,7 @@
                 </dl>
 
                 <p id="Vittoria" class="paper">Educational Tools for Csound</p>
-                <p class="author">Gianni Della Vittoria<span class="pdf"><a href="./proceedings/Educational Tools for Csound.pdf" src="./img/iconpdf.svg" alt="pdf"></a></span></p>
+                <p class="author">Gianni Della Vittoria<span class="pdf"><a href="./proceedings/Educational Tools for Csound.pdf"><img src="./img/iconpdf.svg" alt="pdf"></a></span></p>
                 <dl>
                     <dt>Abstract</dt>
                     <dd>
@@ -210,7 +210,7 @@
 
                 <p id="ffitch2" class="paper">New Opcodes for MIDI CC Preset Banks and MIDI Note-on Toggles for Csound
                     in the Bela, Csound in the Nebulae, and Csound in General</p>
-                <p class="author">John ffitch and Richard Boulanger<span class="pdf"><a href="./proceedings/New Opcodes for MIDI CC Preset Banks and MIDI Note-on Toggles for Csound in the Bela, Csound in the Nebulae, and Csound in General.pdf" src="./img/iconpdf.svg" alt="pdf"></a></span></p>
+                <p class="author">John ffitch and Richard Boulanger<span class="pdf"><a href="./proceedings/New Opcodes for MIDI CC Preset Banks and MIDI Note-on Toggles for Csound in the Bela, Csound in the Nebulae, and Csound in General.pdf"><img src="./img/iconpdf.svg" alt="pdf"></a></span></p>
                 <dl>
                     <dt>Abstract</dt>
                     <dd>
@@ -246,7 +246,7 @@
 
                 <p id="ffitch3" class="paper">Modeling a ’Classic’ Hardware Sequencer in Csound: The Design and Use of
                     the sequ Opcode</p>
-                <p class="author">John ffitch and Richard Boulanger<span class="pdf"><a href="./proceedings/Modeling a ‘Classic’ Hardware Sequencer in Csound -The Design and Use of the sequ Opcode.pdf" src="./img/iconpdf.svg" alt="pdf"></a></span></p>
+                <p class="author">John ffitch and Richard Boulanger<span class="pdf"><a href="./proceedings/Modeling a ‘Classic’ Hardware Sequencer in Csound -The Design and Use of the sequ Opcode.pdf" ><img src="./img/iconpdf.svg" alt="pdf"></a></span></p>
                 <dl>
                     <dt>Abstract</dt>
                     <dd>
@@ -287,7 +287,7 @@
             <h3 id="session_2">Session 2</h3>
 
             <p id="Lazzarini" class="paper">A Just-in-Time Compiler for Csound Opcodes </p>
-            <p class="author">Victor Lazzarini<span class="pdf"><a href="./proceedings/A Just-in-Time Compiler for Csound Opcodes.pdf" src="./img/iconpdf.svg" alt="pdf"></a></span> </p>
+            <p class="author">Victor Lazzarini<span class="pdf"><a href="./proceedings/A Just-in-Time Compiler for Csound Opcodes.pdf"><img src="./img/iconpdf.svg" alt="pdf"></a></span> </p>
             <dl>
                 <dt>Abstract</dt>
                 <dd>
@@ -313,7 +313,7 @@
 
                 <p id="ffitch4" class="paper">The Design and Use of Minimal7: Creating Subsets of Csound for
                     Embedded Applications </p>
-                <p class="author">John ffitch and Richard Boulanger<span class="pdf"><a href="./proceedings/The Design and Use of Minimal7 - Creating Subsets of Csound for Embedded Applications.pdf" src="./img/iconpdf.svg" alt="pdf"></a></span></p>
+                <p class="author">John ffitch and Richard Boulanger<span class="pdf"><a href="./proceedings/The Design and Use of Minimal7 - Creating Subsets of Csound for Embedded Applications.pdf"><img src="./img/iconpdf.svg" alt="pdf"></a></span></p>
                 <dl>
                     <dt>Abstract</dt>
                     <dd>
@@ -405,7 +405,7 @@
                 </dl>
 
                 <p id="Zhang" class="paper">Using a Waveguide to Model the Pipa in Csound</p>
-                <p class="author">Ningxin Zhang<span class="pdf"><a href="./proceedings/Using a Waveguide to Model the Pipa in Csound.pdf" src="./img/iconpdf.svg" alt="pdf"></a></span></p>
+                <p class="author">Ningxin Zhang<span class="pdf"><a href="./proceedings/Using a Waveguide to Model the Pipa in Csound.pdf"><img src="./img/iconpdf.svg" alt="pdf"></a></span></p>
                 <dl>
                     <dt>Abstract</dt>
                     <dd>
@@ -434,7 +434,7 @@
 
                 <p id="Brandtsegg" class="paper">Rhythmic Synchronization of Events based on OSC Data from
                     an External Source </p>
-                <p class="author">Øyvind Brandtsegg<span class="pdf"><a href="./proceedings/Rhythmic Synchronization of Events based on OSC Data from an External Source.pdf" src="./img/iconpdf.svg" alt="pdf"></a></span></p>
+                <p class="author">Øyvind Brandtsegg<span class="pdf"><a href="./proceedings/Rhythmic Synchronization of Events based on OSC Data from an External Source.pdf"><img src="./img/iconpdf.svg" alt="pdf"></a></span></p>
                 <dl>
                     <dt>Abstract</dt>
                     <dd>
@@ -471,7 +471,7 @@
 
             <p id="Larrea" class="paper">New Utility Classes and Sketches for Developers and Sound
                 Designers in CsoundUnity </p>
-            <p class="author">Mateo Larrea and Caio Jiacomini<span class="pdf"><a href="./proceedings/New Utility Classes and Sketches for Developers and Sound Designers in CsoundUnity.pdf" src="./img/iconpdf.svg" alt="pdf"></a></span></p>
+            <p class="author">Mateo Larrea and Caio Jiacomini<span class="pdf"><a href="./proceedings/New Utility Classes and Sketches for Developers and Sound Designers in CsoundUnity.pdf"><img src="./img/iconpdf.svg" alt="pdf"></a></span></p>
             <dl>
                 <dt>Abstract</dt>
                 <dd>
@@ -514,7 +514,7 @@
 </dl> -->
 
                 <p id="Sodre" class="paper">Designing VR Applications with CsoundUnity </p>
-                <p class="author">Pedro Sodre<span class="pdf"><a href="./proceedings/Designing VR Applications with CsoundUnity.pdf" src="./img/iconpdf.svg" alt="pdf"></a></span></p>
+                <p class="author">Pedro Sodre<span class="pdf"><a href="./proceedings/Designing VR Applications with CsoundUnity.pdf"><img src="./img/iconpdf.svg" alt="pdf"></a></span></p>
                 <dl>
                     <dt>Abstract</dt>
                     <dd>
@@ -543,7 +543,7 @@
 
                     <p id="Samsurya" class="paper">Realtime Audio Raytracing and Occlusion in Csound and
                         Unity </p>
-                    <p class="author">Bilkent Samsurya<span class="pdf"><a href="./proceedings/Realtime Audio Raytracing and Occlusion in Csound and Unity.pdf" src="./img/iconpdf.svg" alt="pdf"></a></span></p>
+                    <p class="author">Bilkent Samsurya<span class="pdf"><a href="./proceedings/Realtime Audio Raytracing and Occlusion in Csound and Unity.pdf"><img src="./img/iconpdf.svg" alt="pdf"></a></span></p>
                     <dl>
                         <dt>Abstract</dt>
                         <dd>
@@ -588,7 +588,7 @@
 
                                         <p id="Janevska" class="paper">Implementing Andy Farnell’s ‘bouncing ball’ in
                                             Csound </p>
-                                        <p class="author">Marijana Janevska, James Anderson and Joachim Heintz<span class="pdf"><a href="./proceedings/Implementing Andy Farnell’s ‘bouncing ball’ in Csound.pdf" src="./img/iconpdf.svg" alt="pdf"></a></span></p>
+                                        <p class="author">Marijana Janevska, James Anderson and Joachim Heintz<span class="pdf"><a href="./proceedings/Implementing Andy Farnell’s ‘bouncing ball’ in Csound.pdf"><img src="./img/iconpdf.svg" alt="pdf"></a></span></p>
                                         <dl>
                                             <dt>Abstract</dt>
                                             <dd>
@@ -616,7 +616,7 @@
 
                                             <p id="Phillipe" class="paper">HYPERCURVE - A hybrid curve forge in Csound
                                             </p>
-                                            <p class="author">Johann Phillipe and Jacopo Greco d’Alceo<span class="pdf"><a href="./proceedings/HYPERCURVE - An hybrid curve forge in Csound.pdf" src="./img/iconpdf.svg" alt="pdf"></a></span></p>
+                                            <p class="author">Johann Phillipe and Jacopo Greco d’Alceo<span class="pdf"><a href="./proceedings/HYPERCURVE - An hybrid curve forge in Csound.pdf"><img src="./img/iconpdf.svg" alt="pdf"></a></span></p>
                                             <dl>
                                                 <dt>Abstract</dt>
                                                 <dd>
@@ -642,7 +642,7 @@
 
                                                 <p id="Yang" class="paper">The road to electronic music education and
                                                     composition in China based on Csound </p>
-                                                <p class="author">Wanjun Yang and Jinhao Han</p>
+                                                <p class="author">Wanjun Yang and Jinhao Han<span class="pdf"><a href="./proceedings/The road to electronic music education and composition in China based on Csound.pdf"><img src="./img/iconpdf.svg" alt="pdf"></a></span></p>
                                                 <dl>
                                                     <dt>Abstract</dt>
                                                     <dd>
@@ -686,7 +686,7 @@
 
                                                     <p id="Boulanger" class="paper">Scanned Synthesis Then & Now – The
                                                         Design and Enhancement of Csound’s Scanned Opcodes </p>
-                                                    <p class="author">Richard Boulanger and John ffitch<span class="pdf"><a href="./proceedings/Scanned Synthesis Then & Now – The Design and Enhancement of Csound’s Scanned Opcodes.pdf" src="./img/iconpdf.svg" alt="pdf"></a></span></p>
+                                                    <p class="author">Richard Boulanger and John ffitch<span class="pdf"><a href="./proceedings/Scanned Synthesis Then & Now – The Design and Enhancement of Csound’s Scanned Opcodes.pdf"><img src="./img/iconpdf.svg" alt="pdf"></a></span></p>
                                                     <dl>
                                                         <dt>Abstract</dt>
                                                         <dd>
@@ -729,7 +729,7 @@
 
                                                         <p id="Walter" class="paper">Creating Modulation Matrices for
                                                             Modern Synthesizers and Effects in Csound and Cabbage </p>
-                                                        <p class="author">Jonathon Walter<span class="pdf"><a href="./proceedings/Creating Modulation Matrices for Modern Synthesizers and Effects in Csound and Cabbage.pdf" src="./img/iconpdf.svg" alt="pdf"></a></span></p>
+                                                        <p class="author">Jonathon Walter<span class="pdf"><a href="./proceedings/Creating Modulation Matrices for Modern Synthesizers and Effects in Csound and Cabbage.pdf"><img src="./img/iconpdf.svg" alt="pdf"></a></span></p>
                                                         <dl>
                                                             <dt>Abstract</dt>
                                                             <dd>
