--- a/abstracts.html
+++ b/abstracts.html
@@ -188,7 +188,7 @@
 
                 <p id="ffitch1" class="paper">New Arduino Opcodes to Simplify the Streaming of Sensor and Controller
                     Data to Csound </p>
-                <p class="author">John ffitch and Richard Boulanger</p>
+                <p class="author">John ffitch and Richard Boulanger<span class="pdf"><a href="./proceedings/New Arduino Opcodes to Simplify the Streaming of Sensor and Controller Data to Csound.pdf"><img src="./img/iconpdf.svg" alt="pdf"></a></span></p>
                 <dl>
                     <dt>Abstract</dt>
                     <dd>
