--- a/workshops.html
+++ b/workshops.html
@@ -276,7 +276,12 @@ Csound opcodes for HRTF processing will be introduced in this workshop.
 Participants will then be invited to audition 2 different sets of HRTFs - listening using 2 
 different pairs of ears! 
 Advanced topics such as virtual ambisonics will be considered & further reading suggested for those interested. 
-The workshop will conclude with some time for participants to creatively explore HRTF binaural processing.
+The workshop will conclude with some time for participants to creatively explore HRTF binaural processing.</dd>
+
+<br>
+
+<dd>
+  A binaural piece using techniques discussed - <a href="https://onshow.iadt.ie/2022/student/sadhbh-bashford-rance/">Cloud of Missiles</a>, by Sadhbh Bashford Rance will be available for workshop participants to experience.
 
                         </dd>
 <br>
